--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,7 @@
                     <h2>Results for matching score of resume to JD</h2>
                     <p>Education Score: ${data.degree_score}</p>
                     <p>Skill Score: ${data.skill_score}</p>
+                    <p>skill keywords found in resume:${data.skill_keyword_found_in_resume}</p>
                     <p>Additional Skills keyword put on resume to improve Resume score: ${data.skill_keyword_to_add.join(', ')}</p>
                     <p>Experience Score: ${data.exp_scor}</p>
                     <p>For fresher put keyword like entry-level and for experinced person put as 3+ years of experince </p>
